fixed z-index of account menu

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -21,6 +21,7 @@
     top: 4.7em;
     width: 300px;
     height: 384px;
+    z-index: 10;
 }
 
 .account-menu.active {
@@ -35,4 +36,5 @@
     border-left: 14px solid transparent;  /* Adjust size for the triangle */
     border-right: 14px solid transparent; /* Adjust size for the triangle */
     border-bottom: 20px solid #e6e6e6;  /* Color of the triangle */
+    z-index: 10;
 }
